<resources>
    <!--<string name=""></string>-->

    <string name="app_name">Pando</string>
    <string name="book_list">
        List of Books
    </string>
    <string name="load_book">Load Book</string>
    <string name="app_settings">Settings</string>

    <string name="book_name">Book Name</string>
    <string name="book_text">
        Book Text
    </string>

    <string name="file">File</string>
    <string name="url">URL</string>
    <string name="qr_code">QR Code</string>

    <string name="enter_url">Enter a URL</string>
    <string name="load_url">Load Book From URL</string>

    <string name="preferences_filename">PandoPreferencesFile</string>

    <string name="storage_setting">Internal/External Storage</string>
    <string name="storage_note">Switching this setting attempts to move book files created by the app from internal storage to your SD Card or other "/External Storage/".</string>
    <string name="manual_reindex_setting">Manual Book Reindex</string>
    <string name="manual_reindex_note">It hurts nothing to click this button, use it to find books added via methods outside the app.</string>

    <string name="action_settings">Settings</string>
</resources>